--- a/el_futurix/linefollow.html
+++ b/el_futurix/linefollow.html
@@ -51,8 +51,8 @@
             <div class="btn">REGISTER HERE</div>
             <br>
             <div class="key">Team size : <span class="val"> 1 - 4 </span></div>
-            <div class="key">Registration Fee : <span class="val"> ₹ 449 /TEAM </span></div>
-            <div class="key">Registration Deadline : <span class="val"> 01 November 2024 </span></div>
+            <div class="key">Registration Fee : <span class="val"> ₹ 449 / Team </span></div>
+            <div class="key">Registration Deadline : <span class="val"> 02 November 2024 </span></div>
             <div class="key"> For Further Information :
                 <div class="val">Sundravel G S - 7548873184</div>
                  <div class="val">Venu Srinivasan U C - 9944628912</div>
