--- a/el_futurix/mazesolver.html
+++ b/el_futurix/mazesolver.html
@@ -50,8 +50,8 @@
             <div class="btn" onclick="reg_op">REGISTER HERE</div>
             <br>
             <div class="key">Team size : <span class="val"> 1 - 2 </span></div>
-            <div class="key">Registration Fee : <span class="val"> ₹ 449/TEAM </span></div>
-            <div class="key">Registration Deadline : <span class="val"> 01 November 2024</span></div>
+            <div class="key">Registration Fee : <span class="val"> ₹ 449 / Team </span></div>
+            <div class="key">Registration Deadline : <span class="val"> 02 November 2024</span></div>
             <div class="key">For Further Information:
                 <div class="val">Kavin R V - 6381314154</div>
                  <div class="val">Gowtham T - 9042416640</div>
