--- a/el_futurix/robosoccer.html
+++ b/el_futurix/robosoccer.html
@@ -50,8 +50,8 @@
             <div class="btn">REGISTER HERE</div>
             <br>
             <div class="key">Team size: <span class="val"> 1-5 </span></div>
-            <div class="key">Registration Fee: <span class="val"> ₹ 499 </span></div>
-            <div class="key">Registration Deadline: <span class="val"> 01 November 2024 </span></div>
+            <div class="key">Registration Fee: <span class="val"> ₹ 499 / Team </span></div>
+            <div class="key">Registration Deadline: <span class="val"> 02 November 2024 </span></div>
             <div class="key"> For Further Information:
                 <div class="val">Kishore Kumar A - 9092544754</div>
                  <div class="val">Preeya Dharshan P - 9385935692</div>
