--- a/el_futurix/coderarena.html
+++ b/el_futurix/coderarena.html
@@ -50,10 +50,9 @@
             </p>
             <div class="btn">REGISTER HERE</div>
             <br>
-            <div class="key">Team size: <span class="val"> 1-2 </span></div>
-            <div class="key">Registration Fee: <span class="val"> ₹ 199/Team (or) ₹ 149/person </span></div>
-            <div class="key">                : <span class="val">  </span></div>
-            <div class="key">Registration Deadline: <span class="val"> 01 November 2024 </span></div>
+            <div class="key">Team size: <span class="val"> 1 - 2 </span></div>
+            <div class="key">Registration Fee: <span class="val"> ₹ 199/Team (or)   ₹ 149/person </span></div>
+            <div class="key">Registration Deadline: <span class="val"> 02 November 2024 </span></div>
             <div class="key">For Further Information:
                 <div class="val">Nivashini K - 8220761973</div>
                  <div class="val">Samyuktha S - 9360871719</div>
