--- a/el_futurix/drone.html
+++ b/el_futurix/drone.html
@@ -50,7 +50,7 @@
             </p>
             <div class="btn">REGISTER HERE</div>
             <br>
-            <div class="key">Team size: <span class="val"> 1-5 </span></div>
+            <div class="key">Team size: <span class="val"> 1 - 5 </span></div>
             <div class="key">Registration Fee: <span class="val"> ₹ 499 / Team </span></div>
             <div class="key">Registration Deadline: <span class="val"> 02 November 2024 </span></div>
             <div class="key"> For Further Information:
