--- a/el_futurix/investigator.html
+++ b/el_futurix/investigator.html
@@ -49,8 +49,8 @@
             </p>
             <div class="btn">REGISTER HERE</div>
             <br>
-            <div class="key">Team size: <span class="val"> 1-2 </span></div>
-            <div class="key">Registration Fee: <span class="val"> ₹ 149/Team (or) ₹ 99/person </span></div>
+            <div class="key">Team size: <span class="val"> 1 - 2 </span></div>
+            <div class="key">Registration Fee: <span class="val"> ₹ 149 / Team (or) ₹ 99 / person </span></div>
             <div class="key">Registration Deadline: <span class="val"> 02 November 2024 </span></div>
             <div class="key"> For Further Information:
                 <div class="val">Mahalakshmi K - 8925467050</div>
