--- a/el_futurix/arvr.html
+++ b/el_futurix/arvr.html
@@ -13,7 +13,7 @@
         <div id="frm_cnt">
             <div class="close">X</div>
             <br>
-            <h1 id="event_name">Register for Maze Solver</h1>
+            <h1 id="event_name">Register for The Workshop</h1>
 
             <form id="studentForm" action="" method="" onsubmit="">
                 <label for="college">Team name</label>
@@ -48,8 +48,8 @@
             </p>
             <div class="btn">REGISTER HERE</div>
             <br>
-            <div class="key">Registration Fee : <span class="val"> ₹ 200 </span></div>
-            <div class="key">Registration Deadline : <span class="val"> 01 November 2024 </span></div>
+            <div class="key">Registration Fee : <span class="val"> ₹ 200 / Team </span></div>
+            <div class="key">Registration Deadline : <span class="val"> 02 November 2024 </span></div>
             <div class="key"> For Further Information :
                 <div class="val">Lakshmi Prabha S - 8610416277</div>
             </div>
