--- a/el_futurix/arvr.html
+++ b/el_futurix/arvr.html
@@ -48,7 +48,8 @@
             </p>
             <div class="btn">REGISTER HERE</div>
             <br>
-            <div class="key">Registration Fee : <span class="val"> ₹ 200 / Team </span></div>
+            <div class="key"><span class="val">Registration for this Event can Only be done in this website from 14/10/2024 - 12.00 PM. </span></div>
+            <div class="key">Registration Fee : <span class="val"> ₹ 200 / Person </span></div>
             <div class="key">Registration Deadline : <span class="val"> 02 November 2024 </span></div>
             <div class="key"> For Further Information :
                 <div class="val">Lakshmi Prabha S - 8610416277</div>
