--- a/el_futurix/cyber.html
+++ b/el_futurix/cyber.html
@@ -48,6 +48,7 @@
             </p>
             <div class="btn">REGISTER HERE</div>
             <br>
+            <div class="key"><span class="val">Registration for this Event can Only be done in this website from 14/10/2024 - 12.00 PM. </span></div>
             <div class="key">Registration Fee : <span class="val"> ₹ 200 </span></div>
             <div class="key">Registration Deadline : <span class="val"> 01 November 2024 </span></div>
             <div class="key"> For Further Information:
