--- a/el_futurix/pcbdesign.html
+++ b/el_futurix/pcbdesign.html
@@ -13,7 +13,7 @@
         <div id="frm_cnt">
             <div class="close">X</div>
             <br>
-            <h1 id="event_name">Register for Maze Solver</h1>
+            <h1 id="event_name">Register for The Workshop</h1>
 
             <form id="studentForm" action="" method="" onsubmit="">
                 <label for="college">Team name</label>
@@ -48,7 +48,7 @@
             <div class="btn">REGISTER HERE</div>
             <br>
             <div class="key"><span class="val">Registration for this Event can Only be done in this website from 14/10/2024 - 12.00 PM. </span></div>
-            <div class="key">Registration Fee : <span class="val"> ₹ 200 </span></div>
+            <div class="key">Registration Fee : <span class="val"> ₹ 200 / Person</span></div>
             <div class="key">Registration Deadline : <span class="val"> 01 November 2024 </span></div>
             <div class="key"> For Further Information:
                 <div class="val">Sanjithaa Shree S - 8438832959</div>
