--- a/el_futurix/mazesolver.html
+++ b/el_futurix/mazesolver.html
@@ -13,7 +13,7 @@
         <div id="frm_cnt">
             <div class="close">X</div>
             <br>
-            <h1 id="event_name">Register for Maze Solver</h1>
+            <h1 id="event_name">Register for MAZE MASTER BOT CHALLENGE</h1>
 
             <form id="studentForm" action="" method="" onsubmit="">
                 <label for="college">Team name</label>
@@ -41,7 +41,7 @@
             <img src="img/thumbs/maze.webp" alt="Competition Image">
         </div>
         <div class="description">
-            <h1>MAZE MASTER BOT </h1>
+            <h1>MAZE MASTER BOT CHALLENGE</h1>
             <p>
                 Enter the "Maze Explorer", where tiny robots navigate intricate mazes with precision. Watch as these self-governing marvels navigate their way to victory, demonstrating the combination of strategy and technology. Encourage these tiny explorers as they forge ahead in the field of robotics. Come witness a spectacular display of inventiveness and resourcefulness across the competition lines.
                 <br>
