--- a/el_futurix/cinema.html
+++ b/el_futurix/cinema.html
@@ -13,7 +13,7 @@
         <div id="frm_cnt">
             <div class="close">X</div>
             <br>
-            <h1 id="event_name">Register for Maze Solver</h1>
+            <h1 id="event_name">Register for CINEMATIC QUIZ</h1>
 
             <form id="studentForm" action="" method="" onsubmit="">
                 <label for="college">Team name</label>
@@ -42,7 +42,7 @@
             <img src="img/thumbs/cinematicquiz.png" alt="Competition Image">
         </div>
         <div class="description">
-            <h1>CINIMATIC QUIZ</h1>
+            <h1>CINEMATIC QUIZ</h1>
             <p>
                 Dive into the world of films with a thrilling quiz event! Test your movie knowledge across multiple rounds featuring iconic moments, characters, and soundtracks from across cinematic history. Compete in teams, answer fun questions, and win exciting prizes. A perfect event for movie lovers and trivia enthusiasts!
                 <br>
