--- a/el_futurix/robosoccer.html
+++ b/el_futurix/robosoccer.html
@@ -65,7 +65,7 @@
 
 
     <script>
-    var competitionID = "MH6KdQW3ySZfCY7sa4R"
+    var competitionID = "CMH6KdQW3ySZfCY7sa4R"
     </script>
 
 
