--- a/el_futurix/mazesolver.html
+++ b/el_futurix/mazesolver.html
@@ -49,7 +49,7 @@
             </p>
             <div class="btn" onclick="reg_op">REGISTER HERE</div>
             <br>
-            <div class="key"><span class="val">Registration for this Event can Only be done in this website from 14/10/2024 - 12.00 PM. </span></div>
+            <div class="key"><span class="val">Registration for this event can Only be done on this Official website.</span></div>
             <div class="key">Team size : <span class="val"> 1 - 2 </span></div>
             <div class="key">Registration Fee : <span class="val"> ₹ 449 / Team </span></div>
             <div class="key">Registration Deadline : <span class="val"> 02 November 2024</span></div>
