--- a/el_futurix/webwizard.html
+++ b/el_futurix/webwizard.html
@@ -49,7 +49,7 @@
             </p>
             <div class="btn">REGISTER HERE</div>
             <br>
-            <div class="key"><span class="val">Registration for this Event can Only be done in this website from 14/10/2024 - 12.00 PM. </span></div>
+            <div class="key"><span class="val">Registration for this event can Only be done on this Official website.</span></div>
             <div class="key">Team size : <span class="val">1 - 2</span></div>
             <div class="key">Registration Fee : <span class="val"> ₹ 349/Team of 4 (or) ₹ 249/Team of 2 </span></div>
             <div class="key">Registration Deadline: <span class="val"> 02 November </span></div>
