--- a/el_futurix/test.html
+++ b/el_futurix/test.html
@@ -1,95 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="lolita.css">
-    <title>Form Example</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Event Modal Example</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+  <div class="container mt-5">
+    <h3>Registered Events</h3>
+    <ul class="list-group">
+      <li class="list-group-item">
+        Event: Product Expo 
+        <button class="btn btn-primary float-end" data-bs-toggle="modal" data-bs-target="#eventModal" onclick="showEventDetails('Product Expo', [{name: 'John Doe', id: '001'}, {name: 'Jane Doe', id: '002'}])">View Details</button>
+      </li>
+      <li class="list-group-item">
+        Event: Cyber Security 
+        <button class="btn btn-primary float-end" data-bs-toggle="modal" data-bs-target="#eventModal" onclick="showEventDetails('Cyber Security', [{name: 'Alice', id: '003'}, {name: 'Bob', id: '004'}])">View Details</button>
+      </li>
+      <li class="list-group-item">
+        Event: Drone 
+        <button class="btn btn-primary float-end" data-bs-toggle="modal" data-bs-target="#eventModal" onclick="showEventDetails('Drone', [{name: 'Charlie', id: '005'}, {name: 'David', id: '006'}])">View Details</button>
+      </li>
+      <li class="list-group-item">
+        Event: Robo Soccer 
+        <button class="btn btn-primary float-end" data-bs-toggle="modal" data-bs-target="#eventModal" onclick="showEventDetails('Robo Soccer', [{name: 'Eve', id: '007'}, {name: 'Frank', id: '008'}])">View Details</button>
+      </li>
+    </ul>
+  </div>
 
-    <div style="display: none;" id="frm_cv">
-        <div id="frm_cnt">
-            <div class="close">X</div>
-            <br>
-            <h1 id="event_name">Register for Maze Solver</h1>
-
-            <form id="studentForm" action="" method="" onsubmit="">
-                <label for="college">Team name</label>
-                <input type="text" id="team-name" placeholder="Team name" required>
-                <br><br><br>
-                <div class="tru_con">
-                    <div class="id_elm">
-                        <label for="college">Member 1 (leader)</label><br>
-                        <div class="ip_flx">
-                            <input type="text" class="id_flds" id="mem1" name="Member-1" placeholder="Member ID"
-                                required><br><br>
-                        </div>
-                        <h6 class="nameOfID">student name</h6>
-                    </div>
-                </div>
-
-                <h4 onclick="add_mem_fld(3)">Add member <span><img src="img/add.svg" alt=""></span></h4>
-
-                <!-- <div id="payment_img">
-                    <div class="sct_dtl">Account Name: <br><span>BIT-CENTRE FOR ADVANCED STUDIES</span></div>
-                    <div class="sct_dtl">Account Number: <br></b><span>911010036862582</span></div>
-                    <div class="sct_dtl">IFSC Code: <br><span>UTIB0000368</span></div>
-                    <div class="sct_dtl">Payment proof</div>
-                    <input type="file" id="imageInput" accept="image/*"  required/>
-
-                    <div class="sct_dtl">Transaction ID</div>
-                    <input class="ver" id="traction-id" type="text">
-
-                    <div class="sct_dtl">Transaction Ammount</div>
-                    <input class="ver" id="traction-ammount" type="text">
-
-                    <div class="sct_dtl">Transaction Date</div>
-                    <input class="ver" id="traction-date" type="text">
-
-                    <div class="sct_dtl">Account holder name</div>
-                    <input class="ver" id="holder-name" type="text">
-                </div>                 -->
-
-                <input id="submit" type="submit" value="Submit">
-            </form>
+  <!-- Modal -->
+  <div class="modal fade" id="eventModal" tabindex="-1" aria-labelledby="eventModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="eventModalLabel">Event Details</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
+        <div class="modal-body">
+          <h6 id="modalEventName"></h6>
+          <ul id="memberList" class="list-group"></ul>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
     </div>
+  </div>
 
-    <div class="container">
-        <div class="image">
-            <img src="img/thumbs/Product XPO.webp" alt="Competition Image">
-        </div>
-        <div class="description">
-            <h1>PROJECT XPO</h1>
-            <p>
-                Embark on an innovative journey at "Project Xpo" where experts, scholars, and visionaries converge to showcase groundbreaking projects and inventive solutions. This prestigious platform fosters an environment where ideas flourish, and boundaries are pushed. Don’t miss the chance to participate in this transformative event, where creativity knows no bounds!
-                <br>
-                <a class="rule_book" href="https://drive.google.com/file/d/1FuANRxK5jcRMLy28lbZ-tIPLG-uMURjA/view?usp=sharing" target="_blank">RULE BOOK</a>
-            </p>
-            <div class="btn">REGISTER HERE</div>
-            <br>
-            <div class="key">Team size : <span class="val"> 2 - 4 </span></div>
-            <div class="key">Registration Fee : <span class="val"> ₹ 499 </span></div>
-            <div class="key">Registration Deadline : <span class="val"> 01 November 2024 </span></div>
-            <div class="key"> For Further Information:
-                <div class="val">Abirami M - 9345445205</div>
-                <div class="val">Logeshwaran K - 8610687966</div>
-            </div>
-        </div>
-    </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
+  <script>
+    function showEventDetails(eventName, members) {
+      document.getElementById('modalEventName').textContent = eventName;
+      const memberList = document.getElementById('memberList');
+      memberList.innerHTML = '';  // Clear previous list
 
-
-    <script>
-    var competitionID = "s7rC0nFh5afu6P98XQHX"
-    </script>
-
-
-
-    <script type="module" src="mod_reg.js"></script>
+      members.forEach(member => {
+        const li = document.createElement('li');
+        li.classList.add('list-group-item');
+        li.textContent = `Name: ${member.name}, ID: ${member.id}`;
+        memberList.appendChild(li);
+      });
+    }
+  </script>
 </body>
-<script src="lolita.js"></script>
-
 </html>
