--- a/el_futurix/cad.html
+++ b/el_futurix/cad.html
@@ -13,7 +13,7 @@
         <div id="frm_cnt">
             <div class="close">X</div>
             <br>
-            <h1 id="event_name">Register for CAD MEASTRO CAHALLENGE</h1>
+            <h1 id="event_name">Register for CAD MEASTRO CHALLENGE</h1>
 
             <form id="studentForm" action="" method="" onsubmit="">
                 <label for="college">Team name</label>
