--- a/el_futurix/combo1.html
+++ b/el_futurix/combo1.html
@@ -45,12 +45,12 @@
             <div class="btn">REGISTER HERE</div>
             <br>
             <div class="key"><span class="val">Registration for this event can Only be done on this Official website. </span></div>
-            <div class="key">Team size: <span class="val"> 2 </span></div>
+            <div class="key">Team size: <span class="val"> 1 - 4 </span></div>
             <div class="key">Registration Fee: <span class="val"> ₹ 1049 / Team </span></div>
             <div class="key">Registration Deadline: <span class="val"> 02 November 2024 </span></div>
             <div class="key"> For Further Information:
-                <div class="val">Sanjay M - 8438966306</div>
-                 <div class="val">Praveen V I - 9677355508</div>
+                <div class="val">Tareq M - 9360865563</div>
+                 <div class="val">Karthick - 9345358986</div>
             </div>
         </div>
     </div>
