--- a/el_futurix/combo3.html
+++ b/el_futurix/combo3.html
@@ -49,8 +49,8 @@
             <div class="key">Registration Fee: <span class="val"> ₹ 199 / Team </span></div>
             <div class="key">Registration Deadline: <span class="val"> 02 November 2024 </span></div>
             <div class="key"> For Further Information:
-                <div class="val">Sanjay M - 8438966306</div>
-                 <div class="val">Praveen V I - 9677355508</div>
+             <div class="val">Tareq M - 9360865563</div>
+                 <div class="val">Karthick - 9345358986</div>
             </div>
         </div>
     </div>
