--- a/el_futurix/combo5.html
+++ b/el_futurix/combo5.html
@@ -45,7 +45,7 @@
             <div class="btn">REGISTER HERE</div>
             <br>
             <div class="key"><span class="val">Registration for this event can Only be done on this Official website. </span></div>
-            <div class="key">Team size: <span class="val"> 2 </span></div>
+            <div class="key">Team size: <span class="val"> 1-4 </span></div>
             <div class="key">Registration Fee: <span class="val"> ₹ 199 / Team </span></div>
             <div class="key">Registration Deadline: <span class="val"> 02 November 2024 </span></div>
             <div class="key"> For Further Information:
