--- a/el_futurix/combo3.html
+++ b/el_futurix/combo3.html
@@ -13,7 +13,7 @@
         <div id="frm_cnt">
             <div class="close">X</div>
             <br>
-            <h1 id="event_name">Register for CIRCUIT INNOVATORS CONTEST</h1>
+            <h1 id="event_name">Register for COMBO 3</h1>
 
             <form id="studentForm" action="" method="" onsubmit="">
                 <label for="college">Team name</label>
@@ -45,8 +45,8 @@
             <div class="btn">REGISTER HERE</div>
             <br>
             <div class="key"><span class="val">Registration for this event can Only be done on this Official website. </span></div>
-            <div class="key">Team size: <span class="val"> 2 </span></div>
-            <div class="key">Registration Fee: <span class="val"> ₹ 199 / Team </span></div>
+            <div class="key">Team size: <span class="val"> 1 - 2 </span></div>
+            <div class="key">Registration Fee: <span class="val"> ₹ 549 / Team </span></div>
             <div class="key">Registration Deadline: <span class="val"> 02 November 2024 </span></div>
             <div class="key"> For Further Information:
              <div class="val">Tareq M - 9360865563</div>
