--- a/el_futurix/aboutus.html
+++ b/el_futurix/aboutus.html
@@ -165,7 +165,7 @@
                 </p>
             </div>
             <div class="about-video">
-                <iframe src="https://youtu.be/fnWwtMFHAp4?si=aVnvrnSUl_oqrx7S" 
+                <iframe src="https://youtu.be/fnWwtMFHAp4?si=-8-mSmr-OyPNWQ0U" 
                         title="YouTube video" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                         allowfullscreen>
