--- a/el_futurix/general.html
+++ b/el_futurix/general.html
@@ -44,6 +44,8 @@
             <h1>Unparalleled Experience of Learning, Networking & Digitalizing</h1>
             <p>
                 Unlock the power of digital transformation through an engaging and interactive workshop that blends learning, networking, and the art of digitalization. Explore cutting-edge trends and innovations that are shaping industries today. Participants will gain insights into how digitalization can optimize processes, enhance connectivity, and foster innovation. The session will feature thought-provoking discussions, interactive learning, and opportunities to build connections with like-minded peers and professionals. This is your chance to step into the future of technology and business!
+            <br>
+                <a class="rule_book" href="https://drive.google.com/file/d/1ysQBHon18L1-9gb4cWrLehwDAHY8TncF/view?usp=drive_link" target="_blank">SCHEDULE</a>
             </p>
             <div class="btn">REGISTER HERE</div>
             <br>
