--- a/el_futurix/cyber.html
+++ b/el_futurix/cyber.html
@@ -52,7 +52,7 @@
             <br>
             <div class="key"><span class="val">Registration for this event can Only be done on this Official website. </span></div>
             <div class="key">Registration Fee : <span class="val"> ₹ 200 / Person </span></div>
-            <div class="key">Registration Deadline : <span class="val"> 01 November 2024 </span></div>
+            <div class="key">Registration Deadline : <span class="val"> 04 November 2024(Extended) </span></div>
             <div class="key"> For Further Information:
                 <div class="val">Vasuki S - 9597488715</div>
             </div>
