--- a/el_futurix/cad.html
+++ b/el_futurix/cad.html
@@ -53,7 +53,7 @@
             <div class="key">Team size: <span class="val"> 1 </span></div>
             <div class="key"><span class="val">Registration for this event can Only be done on this Official website.</span></div>
             <div class="key">Registration Fee: <span class="val"> ₹ 149 / Person </span></div>
-            <div class="key">Registration Deadline: <span class="val"> 02 November 2024 </span></div>
+            <div class="key">Registration Deadline: <span class="val"> 04 November 2024 (Extended) </span></div>
             <div class="key"> For Further Information:
                 <div class="val">Abarna R - 9361178039</div>
                  <div class="val">Tamil S P - 9578441283</div>
