--- a/el_futurix/circuit.html
+++ b/el_futurix/circuit.html
@@ -53,7 +53,7 @@
             <div class="key"><span class="val">Registration for this event can Only be done on this Official website. </span></div>
             <div class="key">Team size: <span class="val"> 2 </span></div>
             <div class="key">Registration Fee: <span class="val"> ₹ 199 / Team </span></div>
-            <div class="key">Registration Deadline: <span class="val"> 02 November 2024 </span></div>
+            <div class="key">Registration Deadline: <span class="val"> 04 November 2024 (Extended) </span></div>
             <div class="key"> For Further Information:
                 <div class="val">Sanjay M - 8438966306</div>
                  <div class="val">Praveen V I - 9677355508</div>
