--- a/el_futurix/ipl.html
+++ b/el_futurix/ipl.html
@@ -52,7 +52,7 @@
             <div class="key"><span class="val">Registration for this event can Only be done on this Official website. </span></div>
             <div class="key">Team size : <span class="val"> 2 - 4 </span></div>
             <div class="key">Registration Fee : <span class="val"> ₹ 299  / Team </span></div>
-            <div class="key">Registration Deadline : <span class="val"> 02 November 2024 </span></div>
+            <div class="key">Registration Deadline : <span class="val"> 04 November 2024 (Extended) </span></div>
             <div class="key"> For Further Information:
                 <div class="val">Sabarish A - 6374187114</div>
                  <div class="val">Harshath Ragavendra V - 6374876995</div>
