--- a/el_futurix/linefollow.html
+++ b/el_futurix/linefollow.html
@@ -61,7 +61,7 @@
             <div class="key"><span class="val">Registration for this event can Only be done on this Official website. </span></div>
             <div class="key">Team size : <span class="val"> 1 - 4 </span></div>
             <div class="key">Registration Fee : <span class="val"> ₹ 449 / Team </span></div>
-            <div class="key">Registration Deadline : <span class="val"> 02 November 2024 </span></div>
+            <div class="key">Registration Deadline : <span class="val"> 04 November 2024 (Extended) </span></div>
             <div class="key"> For Further Information :
                 <div class="val">Sundravel G S - 7548873184</div>
                  <div class="val">Venu Srinivasan U C - 9944628912</div>
