--- a/el_futurix/mazesolver.html
+++ b/el_futurix/mazesolver.html
@@ -60,7 +60,7 @@
             <div class="key"><span class="val">Registration for this event can Only be done on this Official website.</span></div>
             <div class="key">Team size : <span class="val"> 1 - 4</span></div>
             <div class="key">Registration Fee : <span class="val"> ₹ 449 / Team </span></div>
-            <div class="key">Registration Deadline : <span class="val"> 02 November 2024</span></div>
+            <div class="key">Registration Deadline : <span class="val"> 04 November 2024 (Extended) </span></div>
             <div class="key">For Further Information:
                 <div class="val">Kavin R V - 6381314154</div>
                  <div class="val">Gowtham T - 9042416640</div>
