--- a/el_futurix/paperpresentation.html
+++ b/el_futurix/paperpresentation.html
@@ -68,7 +68,7 @@
             <div class="key"><span class="val">Registration for this event can Only be done on this Official website. </span></div>
             <div class="key">Team size : <span class="val"> 1 - 4 </span></div>
             <div class="key">Registration Fee : <span class="val"> ₹ 499 / Team </span></div>
-            <div class="key">Registration Deadline : <span class="val"> 02 November 2024 </span></div>
+            <div class="key">Registration Deadline : <span class="val"> 04 November 2024 (Extended) </span></div>
             <div class="key"> For Further Information:
                 <div class="val">Dhevitha S - 6379688496</div>
                  <div class="val">Renika R V - 9715646764</div>
